--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  background-color: #1e1e1e; /* Dark background color */
+  color: #ffffff;
 }
 
 .App-logo {
@@ -14,7 +19,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #282c34; 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +40,83 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Places{
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+.Routes{
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  border-radius: 15px;
+  box-shadow: 2px -2px 10px rgba(3,3,3,0.1);
+  padding: 25px;
+  margin-top: 30px;
+  background-color: #333333; /* Darker background color for routes */
+  color: #ffffff;
+}
+
+.Place{
+  width: 200px;
+  height: 75px;
+  box-shadow: 2px -2px 10px rgba(3,3,3,0.1);
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  margin-right: 50px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  background-color: #444444; /* Darker background color for places */
+  color: #4CCD99; 
+}
+
+.jeep{
+  width: auto;
+  height: auto;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  padding-bottom: 15px;
+  color: #58A399;
+}
+
+.inputs input{
+  width: 400px;
+  height: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  margin-right: 20px;
+}
+.inputs button{
+  background-color: #007F73;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+}
+.inputs{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.jeep span{
+  color:#4CCD99;
+}
+
+.highlight {
+  font-weight: bold;
 }
